--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,5 +1,6 @@
 conda_build_tool: rattler-build
 conda_install_tool: pixi
+conda_forge_output_validation: true
 github:
   branch_name: main
   tooling_branch_name: main
